# ancore

./: CONTRIBUTING.md  PR_DESCRIPTION.md  package.json  pnpm-lock.yaml
.github/workflows/: ci.yml  e2e.yml  release-gate.yml  release.yml  rollback-drill.yml  security.yml  validate-observability.yml
apps/extension-wallet/: AGENTS.md  manifest.json  (+3 more)
contracts/: Cargo.toml
contracts/account/: Cargo.toml
contracts/account/src/: lib.rs
contracts/account/test_snapshots/test/: test_add_session_key.1.json  test_add_session_key_emits_event.1.json  test_add_session_key_rejects_duplicate_permissions.1.json  test_add_session_key_rejects_invalid_permissions.1.json  test_allowed_contracts_none_permits_any_contract.1.json  test_execute_cross_contract_invocation.1.json  test_execute_rejects_invalid_nonce.1.json  test_execute_session_key_end_to_end.1.json  test_execute_session_key_expired.1.json  test_execute_session_key_permissions.1.json  test_execute_validates_nonce_then_increments.1.json  test_has_session_key_absent.1.json  test_has_session_key_after_revoke.1.json  test_refresh_session_key_ttl.1.json  test_register_and_get_modules.1.json  test_register_module_idempotent.1.json  test_revoke_session_key_emits_event.1.json  test_revoke_session_key_removes_session_key_storage_entry.1.json  test_set_allowed_contracts_restricts_execute.1.json  test_set_allowed_contracts_update.1.json  test_unregister_module.1.json  test_upgrade_rejects_zero_hash.1.json
docs/: ROADMAP.md  contract-methods.md  integration-guide.md
scripts/: check-audit-allowlist.js  check-i18n-keys.mjs
(+297 files in other folders)
